--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "stripe": "^11.10.0",
     "swiper": "^8.4.5",
     "typescript": "4.9.4"
   }
